<?xml version="1.0"?>
<package>
  <name>flir_example</name>
  <version>0.0.0</version>
  <description>The flir_example package</description>
  
  <license>BSD</license>
  <url type="website">http://aicrobo.github.io</url>
  <author email="guqiyang@aicrobo.com">QiYang Gu</author>
  <maintainer email="guqiyang@aicrobo.com">QiYang Gu</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>